--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,42 +1,35 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100vw;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.cardsContainer {
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
 }
 
 .card {
-  padding: 2em;
+  padding: 0.5rem;
+  background: rgb(238, 238, 238);
+  border: 1px solid gray;
+  border-radius: 5px;
 }
 
-.read-the-docs {
-  color: #888;
+.card > img {
+  height: 100px;
+  width: 90px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.characterName {
+  margin: 0;
+  font-size: 0.9rem;
+  line-height: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 30px;
 }
