--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 :root {
   --smaller-font: 0.9rem;
+  --normal-font: 1rem;
   --larger-font: 1.2rem;
   --small-padding: 1rem;
   --large-padding: 2rem;
@@ -8,16 +9,17 @@
   --pink: rgb(231, 204, 204);
   --dark-pink: rgb(221, 177, 177);
   --light-red: rgb(167, 80, 80);
-  --dark-red: rgb(168, 29, 29);
+  --dark-red: rgb(139, 0, 0);
   --light-gray: rgb(238, 238, 238);
   --gray: rgb(128, 128, 128);
   --beige: rgb(219, 211, 194);
-  --dark-beige: rgb(158, 143, 110);
+  --dark-beige: rgb(133, 111, 86);
   --green: rgb(183, 201, 180);
 }
 
 #root {
   max-width: 100vw;
+  min-height: 100vh;
   text-align: center;
   position: relative;
   background-size: cover;
@@ -26,15 +28,21 @@
 
 /* Styles the heading and scoreboard */
 .heading {
+  background: rgba(243, 206, 190, 0.8);
+  border-radius: 10px;
+  margin: var(--small-padding);
+  padding: var(--large-padding);
+  font-size: var(--normal-font);
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-content: space-evenly;
-  font-size: var(--smaller-font);
-  padding: var(--small-padding);
   gap: var(--gap-size);
 }
 
 .largeFont {
+  color: rgb(139, 0, 0);
+  text-transform: uppercase;
   font-size: var(--larger-font);
   font-weight: 600;
   margin: 0;
@@ -47,6 +55,12 @@
   text-align: left;
 }
 
+.scoreboard {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 /* Styles the card container and cards */
 .cardsContainer {
   padding: var(--small-padding);
@@ -56,31 +70,35 @@
 }
 
 .card {
-  padding: 0.5rem;
-  background: var(--beige);
-  border: 1px solid var(--dark-beige);
+  background: rgba(223, 196, 153, 0.75);
   border-radius: var(--border-radius);
+  padding-bottom: 0.5rem;
+  transition: 0.5s transform;
 }
 
 .card:hover {
-  background: var(--green);
+  background: rgba(199, 176, 138, 0.9);
+  transform: scale(1.1);
 }
 
 .card > img {
-  height: 100px;
-  width: 90px;
+  height: 150px;
+  width: 100%;
   object-fit: cover;
+  object-position: top;
   border-radius: var(--border-radius);
 }
 
 .characterName {
   margin: 0;
+  min-height: 30px;
   font-size: var(--smaller-font);
   line-height: 1rem;
+  font-weight: 600;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 30px;
 }
 
 /* Styles the game over popup */
