--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,9 @@
   --smaller-font: 0.9rem;
   --normal-font: 1rem;
   --larger-font: 1.2rem;
-  --small-padding: 1rem;
+  --xl-font: 1.5rem;
+  --small-padding: 0.5rem;
+  --normal-padding: 1rem;
   --large-padding: 2rem;
   --gap-size: 1rem;
   --border-radius: 5px;
@@ -30,7 +32,7 @@
 .heading {
   background: rgba(243, 206, 190, 0.8);
   border-radius: 10px;
-  margin: var(--small-padding);
+  margin: var(--normal-padding);
   padding: var(--large-padding);
   font-size: var(--normal-font);
 
@@ -63,7 +65,7 @@
 
 /* Styles the card container and cards */
 .cardsContainer {
-  padding: var(--small-padding);
+  padding: var(--normal-padding);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
@@ -72,7 +74,7 @@
 .card {
   background: rgba(223, 196, 153, 0.75);
   border-radius: var(--border-radius);
-  padding-bottom: 0.5rem;
+  padding-bottom: var(--small-padding);
   transition: 0.5s transform;
 }
 
@@ -126,7 +128,7 @@
 .restart {
   background: var(--pink);
   border: 1px solid var(--dark-red);
-  margin-top: 1rem;
+  margin-top: var(--normal-padding);
 }
 
 .restart:hover {
@@ -143,4 +145,93 @@
   height: 100%;
   width: 100%;
   z-index: 3;
+}
+
+@media (min-width: 480px) {
+  .card > img {
+    height: 200px
+  }
+}
+
+@media (min-width: 620px) {
+  #root {
+    padding: var(--normal-padding);
+  }
+
+  .cardsContainer {
+    grid-template-columns: repeat(4, 1fr);
+    gap: var(--gap-size);
+  }
+
+  .characterName {
+    font-size: var(--normal-font);
+  }
+}
+
+@media (min-width: 800px) {
+  .largeFont {
+    font-size: var(--xl-font);
+  }
+
+  .intro,
+  .currentScore,
+  .highestScore {
+    font-size: var(--larger-font);
+  }
+
+  .cardsContainer {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  }
+
+  .card > img {
+    height: 250px;
+  }
+
+  .characterName {
+    font-size: var(--larger-font);
+    line-height: 1.5rem;
+    min-height: 40px;
+  }
+
+  .gameOverPopup {
+    font-size: var(--larger-font);
+  }
+
+  .failure {
+    font-size: var(--xl-font);
+  }
+
+}
+
+@media (min-width: 1000px) {
+  #root {
+    padding: 3rem;
+    background-size: contain;
+  }
+
+  .heading {
+    margin: 0 5rem;
+    padding: 2rem 4rem;
+  }
+
+  .cardsContainer {
+    padding: 2rem;
+  }
+
+}
+
+@media (min-width: 1200px) {
+  #root {
+    padding: 4rem;
+  }
+
+  .heading {
+    margin: 0 20rem;
+  }
+
+  .cardsContainer {
+    padding: 4rem 10rem;
+    grid-template-columns: repeat(6, 1fr);
+    gap: var(--large-padding);
+  }
 }
