feat: Congratulate user on win and reset game

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,6 +12,10 @@
   --dark-pink: rgb(221, 177, 177);
   --light-red: rgb(167, 80, 80);
   --dark-red: rgb(139, 0, 0);
+  --leaf: rgb(210, 224, 206);
+  --grass: rgb(182, 202, 182);
+  --light-green: rgb(40, 110, 40);
+  --dark-green: rgb(7, 70, 7);
   --brown: rgb(34, 24, 20);
 }
 
