--- a/src/styles/Heading.css
+++ b/src/styles/Heading.css
@@ -17,7 +17,7 @@
 }
   
 .largeFont {
-  color: rgb(139, 0, 0);
+  color: var(--dark-red);
   text-transform: uppercase;
   font-size: var(--larger-font);
   font-weight: 600;
@@ -35,4 +35,24 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+/* Styles for dark mode */
+@media (prefers-color-scheme: dark) {
+  .heading {
+    background: var(--dark-mode-black);
+  }
+
+  .heading > * {
+    color: var(--dark-mode-off-white);
+  }
+
+  .largeFont {
+    color: var(--light-red);
+  }
+
+  .currentScore,
+  .highestScore {
+    color: var(--dark-pink);
+  }
 }
